--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ version: '3.8'
 
 services:
   app:
-    build:
-      dockerfile: ./Dockerfile.app
+    build: .
     volumes:
       - ./data:/app/data
     ports:
